# mr-skinnylegs

./: .gitignore  README.md
app/: development.md
backend/: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_scraper_tracking.py
backend/examples/: obscura_async.py  scrapling_async.py
backend/src/backend/: __init__.py  models.py  tracking.py
backend/src/backend/admin/: __init__.py  auth.py  setup.py  views.py
backend/src/backend/api/: routes.py  server.py
backend/src/backend/core/: config.py
backend/src/backend/db/: __init__.py  engine.py  migrate.py
backend/src/backend/ecommerce/: pricespy_device.py
backend/src/backend/news/: bbc_news.py  nbc_news.py  nbc_news_links.py
backend/src/backend/wikipedia/: wikipedia_apple.py
puppet-app/: README.md  package-lock.json  package.json  pdf.js  scraper.js
