[project]
name = "backend"
version = "0.1.0"
description = "Scraper toolkit with crawl4ai and SQLAdmin tracking API"
readme = "README.md"
authors = [
    { name = "mekanizeai", email = "mekanizeai@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "camoufox>=0.4.11",
    "crawl4ai>=0.9.0",
    "fastapi>=0.115.0",
    "itsdangerous>=2.2.0",
    "mechanicalsoup>=1.4.0",
    "prek>=0.4.5",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "scikit-learn>=1.9.0",
    "scrapling>=0.2.99",
    "sqladmin>=0.27.0",
    "sqlmodel>=0.0.22",
    "structlog>=26.1.0",
    "torch>=2.12.1",
    "transformers>=4.42,<5",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
scraper-api = "backend.api.server:run"
scraper-migrate = "backend.db.migrate:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "backend"
module-root = "src"
